inicio el HOME vista

--- a/css/lunytha.css
+++ b/css/lunytha.css
@@ -9,3 +9,17 @@
 	height: 100% ;
 
 }
+.card div{
+	padding-top: 0.150em !important; 
+	/*margin-top: 0 !important; */
+	margin-bottom:  0 !important; 
+	padding-bottom:  0 !important;
+}
+.addComentario {
+	border-top: solid 0.1em #eeeeee;
+	
+}
+.publicacionTexto{
+
+	margin: 0.5em;
+}
