--- a/css/lunytha.css
+++ b/css/lunytha.css
@@ -2,7 +2,7 @@
 	height: 100%;
 	max-height: 100%;
 	max-width: 100%;
-	/*overflow: hidden;*/
+	
 }
 
 .pageApp{
@@ -14,27 +14,50 @@
 	/*margin-top: 0 !important; */
 	margin-bottom:  0 !important; 
 	padding-bottom:  0 !important;
+	margin-left: 0.5em;
+
+}
+
+.card a{
+	color: #9e9e9e ;
+}
+
+.postAcciones {
+	margin-left: 0.15em !important; 
+	margin-right: 0.15em !important; 
 }
 .addComentario {
+	margin-top: 1em !important; 
 	border-top: solid 0.1em #eeeeee;
+	vertical-align: middle;
 	
 }
-.publicacionTexto{
+.addComentario textarea {
+  	border-bottom: none !important;
+  
+ }
+ .addComentario textarea:focus {
+  	border-bottom: none !important;
+  	box-shadow: none !important; 
+ }
 
+.publicacionTexto{
 	margin: 0.5em;
 }
-#homePulicaciones{
-	overflow: scroll;
+
+
+.barraSuperior{
+  position: fixed !important;
+  top: 0;
+  z-index: 10;
+
 }
 
-/*.barraSuperior{
-	position: absolute;
-	top: 0;
-	overflow: hidden;
-}*/
-
 .barraPie{
+	position: fixed;
+	margin-bottom: 0 !important;
 	overflow: hidden;
+	bottom: 1px;
 }
 
 .mensajeRecivido{
@@ -62,4 +85,31 @@
 	max-width: 70%;
 	padding: 1em;
 	background: #999999;
+}
+
+.contenidoPagina{
+	margin-top: 4em !important;
+
+}
+.comentario small{
+	display: block;
+	width: 100% !important;
+	text-align: right;
+}
+.perfilImage{
+	border: #c8e6c9 2px solid;
+}
+
+#crearPost textarea:focus {
+  	border-bottom: none !important;
+  	box-shadow: none !important; 
+ }
+
+#crearPost textarea {
+  	border-bottom: none !important;
+}
+.crearPostPie{
+	position: fixed;
+	bottom: 0;
+	width:100%;
 }
